unpackaged/main/default/objects/Lead/fields/Another_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Another_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Another checkbox</label>
    <type>Checkbox</type>
</CustomField>