unpackaged/main/default/objects/Lead/fields/Another_Note__c.field-meta.xml
<CustomField>
    <fullName>Another_Note__c</fullName>
    <label>Another Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>