unpackaged/main/default/objects/Lead/fields/one_more__c.field-meta.xml
<CustomField>
    <fullName>one_more__c</fullName>
    <defaultValue>false</defaultValue>
    <label>one more</label>
    <type>Checkbox</type>
</CustomField>